clusters/cluster/apps/verein-ext/ist-informatik-sexy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ist-informatik-sexy
  namespace: verein-ext
spec:
  type: ClusterIP
  selector:
    app: ist-informatik-sexy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
