clusters/cluster/apps/verein-ext/ist-informatik-sexy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ist-informatik-sexy
  namespace: verein-ext
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ist.informatik.sexy
    secretName: verein-ext-tls
  rules:
  - host: ist.informatik.sexy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ist-informatik-sexy
            port:
              number: 80
